fix(select): vertical aligning issue fixed

--- a/src/components/select/bl-select.css
+++ b/src/components/select/bl-select.css
@@ -6,8 +6,7 @@
 .select-wrapper {
   width: 100%;
   position: relative;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: var(--bl-size-3xs);
 
   --padding-vertical: var(--bl-size-2xs);
